# ==================
# Project definition
# ==================
# Derived from https://peps.python.org/pep-0621/
[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42", # At least v42 of setuptools required.
  "versioningit",
]

[project]
name = "verlib2"
description = 'A standalone bundle of "distutils.version" and "packaging.version", without anything else.'
readme = "README.md"
keywords = [
  "distutils",
  "packaging",
  "pep386",
  "pep440",
  "version",
  "versioning",
]
maintainers = [
  { name = "Andreas Motl", email = "andreas.motl@panodata.org" },
]
authors = [ { name = "Donald Stufft", email = "donald@stufft.io" } ]
requires-python = ">=3.6"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Python :: Free Threading",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "importlib-metadata; python_version<'3.8'",
]
optional-dependencies.develop = [
  "poethepoet<1",
  "pyproject-fmt<3",
  "ruff<0.16",
  "ty==0.0.26; python_version>='3.8'",
  "validate-pyproject<1",
]
optional-dependencies.release = [
  "build<2",
  "twine<7",
]
optional-dependencies.test = [
  "pretend<2",
  "pytest<9",
  "pytest-cov<8",
]
urls.repository = "https://github.com/pyveci/verlib2"

[tool.setuptools]
packages.find = {}

[tool.ruff]
# line-length = 120
lint.select = [
  # Builtins
  "A",
  # Bugbear
  "B",
  # comprehensions
  "C4",
  # Pycodestyle
  "E",
  # eradicate
  "ERA",
  # Pyflakes
  "F",
  # isort
  "I",
  # pandas-vet
  "PD",
  # return
  "RET",
  # Bandit
  "S",
  # print
  "T20",
  "W",
  # flake8-2020
  "YTT",
]
lint.ignore = [ "RET505" ]
lint.per-file-ignores."tests/*" = [ "S101" ]  # Use of `assert` detected

[tool.pytest]
ini_options.minversion = "2.0"
ini_options.addopts = """
  -rfEX -p pytester --strict-markers --verbosity=3
  --cov --cov-report=term-missing --cov-report=xml
  """
ini_options.log_level = "DEBUG"
ini_options.log_cli_level = "DEBUG"
ini_options.testpaths = [ "tests" ]
ini_options.xfail_strict = true
ini_options.markers = []

[tool.coverage]
run.branch = true
run.omit = [
  "tests/*",
]
report.exclude_lines = [ "pragma: no cover" ]
report.fail_under = 0
report.show_missing = true

[tool.poe]
# ===================
# Tasks configuration
# ===================
tasks.format = [
  { cmd = "ruff format ." },
  # Configure Ruff not to auto-fix (remove!):
  # Ignore unused imports (F401), unused variables (F841), `print` statements (T201), and commented-out code (ERA001).
  { cmd = "ruff check --fix --ignore=ERA --ignore=F401 --ignore=F841 --ignore=T20 --ignore=ERA001 ." },
  { cmd = "pyproject-fmt --keep-full-version pyproject.toml" },
]
tasks.lint = [
  { cmd = "ruff format --check ." },
  { cmd = "ruff check ." },
  { cmd = "validate-pyproject pyproject.toml" },
  { cmd = "ty check" },
]
tasks.test = [
  { cmd = "pytest" },
]
tasks.test-fast = [
  { cmd = "pytest -m 'not slow'" },
]
tasks.build = { cmd = "python -m build" }
tasks.check = [ "lint", "test" ]
tasks.release = [
  { cmd = "python -m build" },
  { cmd = "twine upload --skip-existing dist/*.tar.gz dist/*.whl" },
]

[tool.versioningit]
vcs.method = "git-archive"
vcs.default-tag = "v0.0.0"
vcs.describe-subst = "$Format:%(describe:tags,match=v*)$"
# Emit PyPI-compatible "dirty" version strings. `+` characters are unsuitable, because
# they would designate local version identifiers, which do not upload to PyPI.
# https://packaging.python.org/en/latest/specifications/version-specifiers/#local-version-identifiers
format.distance = "{base_version}.post{build_date:%Y%m%d%H%M%S}"
